# ocaml-bibtex

./: .gitignore  CHANGES.md  LICENSE.md  README.md  bib.opam  dune-project
src/: bib.ml  bib.mli  dune  index.mld
src/lib/: bib.mli
test/: bibtrip.ml  concat.bib  dune  test.bib  test.expected  test.ml  test2.bib
